fix: The search box hides the horizontal scroll bar in the Logs.

--- a/src/Resources/laravel-debugbar.css
+++ b/src/Resources/laravel-debugbar.css
@@ -805,6 +805,10 @@ div.phpdebugbar-panel[data-collector="__datasets"] {
     padding: 0 10px;
 }
 
+div.phpdebugbar-panel[data-collector="logs"] {
+    height: calc(100% - 30px);
+}
+
 div.phpdebugbar-panel table {
     margin: 10px 0px!important;
     width: 100%!important;
